--- a/po/nl.po
+++ b/po/nl.po
@@ -27,21 +27,22 @@
 #  Weighting  = Weging
 #
 # filename: pspp-<version>.nl.po
-# Harry Thijssen <pspp@sjpaes.nl>, 2009, 2010, 2011, 2012, 2013, 2014.
+# Harry Thijssen <pspp4windows@gmail.com>, 2009, 2010, 2011, 2012, 2013, 2014.
 # merge statement: msgmerge -o pspp-0.8.2.nl.po-new pspp-0.8.2.nl.po pspp.pot
+# Weet je een betere vertaling als wat er nu staat of een vertaling van een nog niet vertaalde tekst, stuur die naar mij.
+# Ben jij bereid om de nederlandse vertaling van PSPP over te nemen? Neem dan contact met mij op.
 msgid ""
 msgstr ""
 "Project-Id-Version: pspp-0.8.2.1\n"
 "Report-Msgid-Bugs-To: pspp-dev@gnu.org\n"
 "POT-Creation-Date: 2014-04-03 23:15-0700\n"
-"PO-Revision-Date: 2014-04-05 21:25+0100\n"
+"PO-Revision-Date: 2014-04-10 21:25+0100\n"
 "Last-Translator: Harry Thijssen <pspp@sjpaes.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Wil jij PSPP vertalen? Neem dan contact met mij op.\n"
 "Plural-Forms: nplurals=2; plural=n != 1\n"
 
 #: src/ui/gui/helper.c:204
@@ -69,7 +70,7 @@ msgstr "Prefereer variable labels"
 
 #: src/ui/gui/psppire-dictview.c:596
 msgid "Unsorted (dictionary order)"
-msgstr ""
+msgstr "Ongesorteerd (bibliotheek volgorde)"
 
 #: src/ui/gui/psppire-dictview.c:602
 msgid "Sort by name"
@@ -825,9 +826,9 @@ msgid "This system file does not indicate its own character encoding.  Using def
 msgstr ""
 
 #: src/data/sys-file-reader.c:796
-#, fuzzy, c-format
+#, c-format
 msgid "Ignoring string variable `%s' set as weighting variable."
-msgstr "Doelvariabele %s dupliceert bestaande variabele %s."
+msgstr "Negeren tekenreeksvariabele `%s' gezet als wegings variabele."
 
 #: src/data/sys-file-reader.c:841
 #, c-format
@@ -1629,7 +1630,7 @@ msgstr "Onbekend opmaaktype '%s'."
 #: src/language/lexer/format-parser.c:122
 #, c-format
 msgid "Format specifier `%s' lacks required width."
-msgstr ""
+msgstr "In formaat specificatie `%s' ontbreekt de vereiste breedte"
 
 #: src/language/lexer/format-parser.c:138
 msgid "expecting format type"
@@ -1783,7 +1784,7 @@ msgstr "%zu variabel(en) kunnen niet gehercodeerd worden in %zu variabel(en).  S
 #: src/language/xforms/recode.c:494
 #, c-format
 msgid "There is no variable named %s.  (All string variables specified on INTO must already exist.  Use the STRING command to create a string variable.)"
-msgstr "Er is geen variabele genaamd %s.  (Alle tekenreeksvariabelen gespecificeerd bij INTO dienen al te bestaan.  Gebruik de STRING opdracht om een tekenreeks variabele aan te maken.)"
+msgstr "Er is geen variabele genaamd %s.  (Alle tekenreeksvariabelen gespecificeerd bij INTO dienen al te bestaan.  Gebruik de STRING opdracht om een tekenreeksvariabele aan te maken.)"
 
 #: src/language/xforms/recode.c:510
 #, c-format
@@ -2277,12 +2278,12 @@ msgstr "Afdrukindeling"
 
 #: src/language/dictionary/sys-file-info.c:1002
 msgid "No valid encodings found."
-msgstr ""
+msgstr "Geen valide coderingen gevonden."
 
 #: src/language/dictionary/sys-file-info.c:1009
 #, c-format
 msgid "The following table lists the encodings that can successfully read %s, by specifying the encoding name on the GET command's ENCODING subcommand.  Encodings that yield identical text are listed together."
-msgstr ""
+msgstr "de volgende tabel geeft de coderingen die succesvol %s kunnen lezen, door de coderings naam op te geven bij het GET commando's ENCODING subcommando.  Coderingen die identieke teksten opleveren worden samen getoond."
 
 #: src/language/dictionary/sys-file-info.c:1016
 #, c-format
@@ -2295,7 +2296,7 @@ msgstr "Coderingen"
 
 #: src/language/dictionary/sys-file-info.c:1050
 msgid "The following table lists text strings in the file dictionary that the encodings above interpret differently, along with those interpretations."
-msgstr ""
+msgstr "De volgende tabel geeft tekenreeksen in de bestandsbibliotheek die door de bovenstaande coderingen anders worden geinterpreteerd, tesamen met hun interpretaties."
 
 #: src/language/dictionary/sys-file-info.c:1056
 #, c-format
@@ -4042,14 +4043,12 @@ msgid "Model Summary (%s)"
 msgstr "Model Summary (%s)"
 
 #: src/language/stats/regression.c:825
-#, fuzzy
 msgid "Unstandardized Coefficients"
-msgstr "Onzekerheidscoëfficiënt"
+msgstr "Unstandardized Coefficients"
 
 #: src/language/stats/regression.c:828
-#, fuzzy
 msgid "Standardized Coefficients"
-msgstr "Contrastcoëfficiënten"
+msgstr ""
 
 #: src/language/stats/regression.c:829
 msgid "Beta"
@@ -4060,9 +4059,9 @@ msgid "(Constant)"
 msgstr "(Constante)"
 
 #: src/language/stats/regression.c:843
-#, fuzzy, c-format
+#, c-format
 msgid "%g%% Confidence Interval for B"
-msgstr "%g%% Betrouwbaarheidsinterval"
+msgstr "%g%% Betrouwbaarheidsinterval voor B"
 
 #: src/language/stats/regression.c:907
 #, c-format
@@ -5949,14 +5948,12 @@ msgid "_Value:"
 msgstr "_Waarde:"
 
 #: src/ui/gui/psppire-val-chooser.c:331
-#, fuzzy
 msgid "_System Missing"
-msgstr "Ontbrekende waarde"
+msgstr ""
 
 #: src/ui/gui/psppire-val-chooser.c:332
-#, fuzzy
 msgid "System _or User Missing"
-msgstr "Ontbrekende waarde"
+msgstr ""
 
 #: src/ui/gui/psppire-val-chooser.c:333
 msgid "_Range:"
@@ -6769,7 +6766,7 @@ msgstr "_Gebruik hetzelfde hercoderings schema voro alle variabelen"
 
 #: src/ui/gui/autorecode.ui:250
 msgid "Treat _blank string values as missing"
-msgstr ""
+msgstr "Behandel lege tekenreeks waardes als missing"
 
 #: src/ui/gui/binomial.ui:63
 msgid "_Test Variable List:"
@@ -6777,7 +6774,7 @@ msgstr "Testvariabelelijst:"
 
 #: src/ui/gui/binomial.ui:133 src/ui/gui/chi-square.ui:83
 msgid "_Get from data"
-msgstr ""
+msgstr "Haalop van data"
 
 #: src/ui/gui/binomial.ui:150 src/ui/gui/indep-samples.ui:342
 msgid "_Cut point:"
@@ -6937,7 +6934,7 @@ msgstr "Print tabellen"
 
 #: src/ui/gui/crosstabs.ui:280
 msgid "Pivot"
-msgstr ""
+msgstr "Draai"
 
 #: src/ui/gui/crosstabs.ui:293 src/ui/gui/sort.ui:130
 msgid "Ascending"
@@ -7511,7 +7508,7 @@ msgstr "_Maximaal aantal iteraties: "
 
 #: src/ui/gui/logistic.ui:364
 msgid "Include _constant in model"
-msgstr ""
+msgstr "Bevat _constantes in model"
 
 #: src/ui/gui/means.ui:8
 msgid "Means"
@@ -7635,7 +7632,7 @@ msgstr "Rangschik Cases"
 
 #: src/ui/gui/rank.ui:58
 msgid "_By:"
-msgstr ""
+msgstr "Per:"
 
 #: src/ui/gui/rank.ui:208
 msgid "_Smallest Value"
