--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ See the end for copying conditions.
 
 Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
  
-Changes since 0.8.2.1:
+Changes from 0.8.2 to 0.8.3:
 
  * Independent T-Tests displayed the standard error of the difference
    and the confidence interval for the unequal variances case, where
