--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
  
+Changes from 0.8.2 to 0.8.3.1:
+
+ * Fixed a bug where planned comparisons in oneway anova did not correctly
+   handle negative T-values.
+
 Changes from 0.8.2 to 0.8.3:
 
  * Independent T-Tests displayed the standard error of the difference
