CROSSTABS: Calculate significance for lambda and Somers' d.
John Darrington pointed out that lambda just uses normal significance.
Somers' d appears to do so also (based on only a few examples though).

--- a/doc/statistics.texi
+++ b/doc/statistics.texi
@@ -603,7 +603,7 @@ following bugs:
 
 @itemize @bullet
 @item
-Significance of symmetric and directional measures is not calculated.
+Significance of some symmetric and directional measures is not calculated.
 @item
 Asymptotic standard error is not calculated for
 Goodman and Kruskal's tau or symmetric Somers' d.
