doc: Fix PDF manual build with updated texinfo.tex.
Patch posted at https://savannah.gnu.org/patch/?8518.

--- a/doc/statistics.texi
+++ b/doc/statistics.texi
@@ -500,7 +500,7 @@ The @subcmd{FORMAT} subcommand controls the characteristics of the
 crosstabulation tables to be displayed.  It has a number of possible
 settings:
 
-@itemize @asis
+@itemize @w{}
 @item
 @subcmd{TABLES}, the default, causes crosstabulation tables to be output.
 @subcmd{NOTABLES} suppresses them.
