--- a/doc/pspp.texi
+++ b/doc/pspp.texi
@@ -54,7 +54,7 @@
 This manual is for GNU PSPP version @value{VERSION},
 software for statistical analysis.
 
-Copyright @copyright{} 1997, 1998, 2004, 2005, 2009, 2012, 2013 Free Software Foundation, Inc.
+Copyright @copyright{} 1997, 1998, 2004, 2005, 2009, 2012, 2013, 2014 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -153,6 +153,6 @@ in the production of this manual.
 @bye
 
 @c Local Variables:
-@c use (texinfo-multiple-files-update "pspp.texinfo")  in emacs to keep these files consistent
-@c compile-command: "makeinfo pspp.texinfo"
+@c use (texinfo-multiple-files-update "pspp.texi")  in emacs to keep these files consistent
+@c compile-command: "makeinfo pspp.texi"
 @c End:
