Add GRAPH command initially with just scatterplots and histograms.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,8 @@ is also an important contributor to GSL, which is used by PSPP.
 
 * Mehmet Hakan Satman wrote the QUICK CLUSTER command.
 
+* Friedrich Beckmann wrote the GRAPH command.
+
 We also thank past contributors:
 
 * John Williams wrote an initial draft of the T-TEST procedure.
