--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
  
+Changes since 0.8.4:
+
+ * The GRAPH command is now available.  Initially it support
+   scatterplots and histograms.
+
 Changes from 0.8.3 to 0.8.4:
 
  * Formatting of SYSFILE INFO output was made easier to read.
