pspp-dev.texi: Add authors as @author arguments.
With a blank @author, makeinfo complains.
Without @author at all, the title page in TeX output looks funny.
So this commit simply names the authors, as determined by "git log" on
the doc/dev directory.

--- a/doc/pspp-dev.texi
+++ b/doc/pspp-dev.texi
@@ -53,7 +53,8 @@ Free Documentation License".
 @title PSPP Developers Guide
 @subtitle GNU PSPP Statistical Analysis Software
 @subtitle Release @value{VERSION}
-@author
+@author Ben Pfaff
+@author John Darrington
 @page
 @vskip 0pt plus 1filll
 @insertcopying
